<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceHasOverlappingRendering="true"
    tools:context="com.FailX.BaggerBingo.FinishActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-4212746257484958/2737658722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0">
    </com.google.android.gms.ads.AdView>

    <Button
        android:id="@+id/menu_button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/menu_btn"
        android:textColor="#000000"
        android:background="@drawable/texture_background"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/silver_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/silver"
        android:gravity="center"
        android:text="@string/sliver_text"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.3"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/bronze_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bronze"
        android:gravity="center"
        android:text="@string/bronze_text"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.3"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/watercolorb_background" />

    <TextView
        android:id="@+id/trophy_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/trophy"
        android:gravity="center"
        android:text="@string/trophy_text"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/winner_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:elevation="1dp"
        android:text="@string/winner_text"
        android:background="@drawable/stains_background"
        android:textColor="#000000"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintWidth_percent="1" />

</androidx.constraintlayout.widget.ConstraintLayout>